ingress/mysite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-nginx
  labels:
    app: mysite-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite-nginx
  template:
    metadata:
      labels:
        app: mysite-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-nginx-service
spec:
  selector:
    app: mysite-nginx
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mysite-nginx-ingress-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.mau.guru`)
    kind: Rule
    services:
    - name: mysite-nginx-service
      port: 80
  tls:
    secretName: mau-guru-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mysite-nginx-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.mau.guru`)
    kind: Rule
    services:
    - name: mysite-nginx-service
      port: 80
    middlewares:
      - name: default-https-redirect@kubernetescrd
